{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 322,
  "lineage": "33c4c332-d270-b41c-bdb2-13c6d3102c10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267047935:internet-gateway/igw-0564ce25058a2282e",
            "id": "igw-0564ce25058a2282e",
            "owner_id": "533267047935",
            "tags": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-igw",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            },
            "tags_all": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-igw",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            },
            "vpc_id": "vpc-0e7ef7b5337ec4f15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267047935:route-table/rtb-0daeb185654b114e2",
            "id": "rtb-0daeb185654b114e2",
            "owner_id": "533267047935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0564ce25058a2282e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-public-rt",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            },
            "tags_all": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-public-rt",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ef7b5337ec4f15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f3361c2b5b77947",
            "route_table_id": "rtb-0daeb185654b114e2",
            "subnet_id": "subnet-0338e931fe57d0471"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bbcf60759f3914c",
            "route_table_id": "rtb-0daeb185654b114e2",
            "subnet_id": "subnet-04f2a535f65c37d39"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267047935:security-group/sg-09dcd8b91c2811b36",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dcd8b91c2811b36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-s3-mount-ecs-20251110094158322700000005",
            "name_prefix": "ecs-s3-mount-ecs-",
            "owner_id": "533267047935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-ecs-sg",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            },
            "tags_all": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-ecs-sg",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ef7b5337ec4f15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267047935:subnet/subnet-0338e931fe57d0471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.109.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0338e931fe57d0471",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-public-subnet-1",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount",
              "Tier": "Public"
            },
            "tags_all": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-public-subnet-1",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0e7ef7b5337ec4f15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267047935:subnet/subnet-04f2a535f65c37d39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.109.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f2a535f65c37d39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-public-subnet-2",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount",
              "Tier": "Public"
            },
            "tags_all": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-public-subnet-2",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0e7ef7b5337ec4f15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:533267047935:vpc/vpc-0e7ef7b5337ec4f15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.109.0.0/16",
            "default_network_acl_id": "acl-085ca3cb3dbb9b8d4",
            "default_route_table_id": "rtb-0c37c7b076ab5d8aa",
            "default_security_group_id": "sg-04ff97dc28f191919",
            "dhcp_options_id": "dopt-00d1bfccce4b8e338",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7ef7b5337ec4f15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c37c7b076ab5d8aa",
            "owner_id": "533267047935",
            "tags": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-vpc",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            },
            "tags_all": {
              "Compliance": "None",
              "CostCenter": "Engineering",
              "Environment": "test",
              "ManagedBy": "terraform",
              "Name": "ecs-s3-mount-vpc",
              "Owner": "DevOps Team",
              "Project": "ecs-s3-mount"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}